Cycles: Zooming in rendered mode during update out of sync with intended zoom #34205

Closed
opened 2013-02-11 16:19:40 +01:00 by Danny McGrath · 14 comments
Member

%%%--- Operating System, Graphics card ---
Ubuntu 64bit, Nvidia GTX 550 Ti

- Blender version with error, and version that worked ---

r54463 (only tested as far back as 2.63 release, which is also affected)

- Short description of error ---

If you zoom with wheel mouse during render on GPU on a small area (maximized cycles will not do this as it doesn't render fast enough, nor will cpu for the same reason I assume), while looking through the camera (so you can tell the extents and proportion of the object to the camera bounds), sometimes you can land on a zoom where the object appears to have not fully zoomed to match the camera bounds. Moving the 3d cursor (or anything that updates cycles, for that matter), causes the view to update. very minor, but reporting as asked. See "before 3d cursor.png" and "after 3d cursor.png" attached to report for an idea.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • Set up a small cycles rendered editor, about the size of the default object inspector area (See "zoom bug.png")
  • Keep the preview sampling to something your GPU can render almost instantly (I used the default 10)
  • Zoom the rendered view in and out, and most of the time you can land it (as seen in "zoom bug.png") on an amount that causes cycles to miss a final update
  • If you get this, place the 3d cursor (or tab in/out of edit mode etc) to trigger the missing final event that "fixes" it

Assign to Brecht please :)
%%%

%%%--- Operating System, Graphics card --- Ubuntu 64bit, Nvidia GTX 550 Ti - Blender version with error, and version that worked --- r54463 (only tested as far back as 2.63 release, which is also affected) - Short description of error --- If you zoom with wheel mouse during render on GPU on a small area (maximized cycles will not do this as it doesn't render fast enough, nor will cpu for the same reason I assume), while looking through the camera (so you can tell the extents and proportion of the object to the camera bounds), sometimes you can land on a zoom where the object appears to have not fully zoomed to match the camera bounds. Moving the 3d cursor (or anything that updates cycles, for that matter), causes the view to update. very minor, but reporting as asked. See "before 3d cursor.png" and "after 3d cursor.png" attached to report for an idea. - Steps for others to reproduce the error (preferably based on attached .blend file) --- - Set up a small cycles rendered editor, about the size of the default object inspector area (See "zoom bug.png") - Keep the preview sampling to something your GPU can render almost instantly (I used the default 10) - Zoom the rendered view in and out, and most of the time you can land it (as seen in "zoom bug.png") on an amount that causes cycles to miss a final update - If you get this, place the 3d cursor (or tab in/out of edit mode etc) to trigger the missing final event that "fixes" it Assign to Brecht please :) %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Brecht, stealing this one form you ;)

Shall be fixed in svn rev54491. Thanks for the report, closing.%%%

%%%Brecht, stealing this one form you ;) Shall be fixed in svn rev54491. Thanks for the report, closing.%%%
Author
Member

%%%hmm, seems that it only made it slightly more difficult to trigger.

See quick vid: http://download.blender.org/ftp/incoming/bugreports/cycles%20zoom%20bug.ogv

I noticed that when I retested, it still happened, but oddly enough not while I was loading my CPU a bit with the recording software. Since I already knew that a slow CPU isn't fast enough to trigger, on a hunch I tried lowering the GPU sample value, sure enough, it still triggers.

In all honestly, it's such a minor issue, but I figure that maybe you were preferring to solve properly instead of just reducing the timing needed to trigger? Anyways, keep open/fix/close as you see fit from here. Thanks! o/%%%

%%%hmm, seems that it only made it slightly more difficult to trigger. See quick vid: http://download.blender.org/ftp/incoming/bugreports/cycles%20zoom%20bug.ogv I noticed that when I retested, it still happened, but oddly enough not while I was loading my CPU a bit with the recording software. Since I already knew that a slow CPU isn't fast enough to trigger, on a hunch I tried lowering the GPU sample value, sure enough, it still triggers. In all honestly, it's such a minor issue, but I figure that maybe you were preferring to solve properly instead of just reducing the timing needed to trigger? Anyways, keep open/fix/close as you see fit from here. Thanks! o/%%%

%%%Ah, GPU thing. See how it could fail here. Will commit change soon :)%%%

%%%Ah, GPU thing. See how it could fail here. Will commit change soon :)%%%

%%%I've commited correction for GPU render at r54520. Think now issue shall be solved for real :)

If not -- poke me and i'll re-open report just one more time :)%%%

%%%I've commited correction for GPU render at r54520. Think now issue shall be solved for real :) If not -- poke me and i'll re-open report just one more time :)%%%

%%%Some more info:

I can still reproduce this, even after r54520. I'm on win64 r54528, it happens on CPU and GPU.
All recent windows buildbot builds also show the problem (none are up to r54520 yet though).

thanks, David.
%%%

%%%Some more info: I can still reproduce this, even after r54520. I'm on win64 r54528, it happens on CPU and GPU. All recent windows buildbot builds also show the problem (none are up to r54520 yet though). thanks, David. %%%
Author
Member

%%%I can confirm that this still happens with blender-2.65-r54528-linux-glibc211-x86_64 from the buildbot%%%

%%%I can confirm that this still happens with blender-2.65-r54528-linux-glibc211-x86_64 from the buildbot%%%

%%%FYI, r54528 from buildbot has the same problem.%%%

%%%FYI, r54528 from buildbot has the same problem.%%%

%%%Hrm.. Currently only could think of boost's conditional_variable::wait is not actually atomic :S Well, busy wait would solve issues here. Old friend better than two new fancy ones :)

Reopening, will patch the things either later tonight or tomorrow.%%%

%%%Hrm.. Currently only could think of boost's conditional_variable::wait is not actually atomic :S Well, busy wait would solve issues here. Old friend better than two new fancy ones :) Reopening, will patch the things either later tonight or tomorrow.%%%

%%%On the second review of the video that seems it's now not just an issue of cycles itself (changing 3d cursor location doesn't trigger cycles to redraw) but could be something with synchronization between events..

looking into code now trying to figure something out. Couldn't reproduce issue on own computer -- all this depends on timings which are different on different computers! :)%%%

%%%On the second review of the video that seems it's now not just an issue of cycles itself (changing 3d cursor location doesn't trigger cycles to redraw) but could be something with synchronization between events.. looking into code now trying to figure something out. Couldn't reproduce issue on own computer -- all this depends on timings which are different on different computers! :)%%%

%%%Ok, now i see the issue. Apparently, there's some timeout within which reset is not allowed. Perhaps this is so no reset happens too often for performance issues. And the thing is -- if camera changes too often, some reset could be missed because of this timeout.

There's a patch which seems to be solving this http://www.pasteall.org/39695/diff but would want Brecht to check on this issue too, maybe there's some clearer way to do this.

%%%

%%%Ok, now i see the issue. Apparently, there's some timeout within which reset is not allowed. Perhaps this is so no reset happens too often for performance issues. And the thing is -- if camera changes too often, some reset could be missed because of this timeout. There's a patch which seems to be solving this http://www.pasteall.org/39695/diff but would want Brecht to check on this issue too, maybe there's some clearer way to do this. %%%
Author
Member

%%%cool, this patch does seem to get rid of it here too.%%%

%%%cool, this patch does seem to get rid of it here too.%%%

%%%After Brecht's feedback commited patch to svn rev54574. So let's try considering issue solved again :)%%%

%%%After Brecht's feedback commited patch to svn rev54574. So let's try considering issue solved again :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34205
No description provided.