Fix #34205: Cycles: Zooming in rendered mode during update out of sync with intended zoom

Made sure no pause_cond.wait() happens at the same time as session as resetting.